# gtkwave-archive

gtkwave/: .gtkwaverc  CHANGELOG.TXT  Makefile.am  Makefile.in  config.h.in  configure  configure.scan  configure2  configure3  distro_from_cvs.sh  execlean.sh  use_gtkwave3_directory_not_this_one
gtkwave/contrib/: Makefile.in
gtkwave/contrib/pccts/: Makefile.in
gtkwave/contrib/pccts/IBM_VISUAL_AGE_PROJECTS/: Makefile.in
gtkwave/contrib/pccts/antlr/: Makefile  Makefile.in  antlr.g  antlr.r  bits.c  build.c  dumpcycles.c  dumpnode.c  egman.c  fcache.c  fset.c  fset2.c  gen.c  generic.h  globals.c  hash.c  hash.h  lex.c  main.c  misc.c  mode.h  mrhoist.c  pred.c  proto.h  scan.c  syn.h
gtkwave/contrib/pccts/dlg/: dlg.h  (+14 more)
gtkwave/contrib/rtlbrowse/: Makefile.am  Makefile_GTK1.in  Makefile_GTK2.in  definehash.c  fgetdynamic.c  fgetdynamic.h  jrb.c  jrb.h  logfile.c  splay.c  splay.h  stem_recurse.c  tree_widget.c  vlex.c  vlex.h  vlex.l  wavelink.h
gtkwave/contrib/vermin/: Makefile.in  args.c  attrib.h  err.c  inter.c  inter.h  jrb.c  jrb.h  keyword_tokens.h  keywordhash.c  parser.dlg  preproc.c  scan.c  shred.c  shred.h  symbol.c  symbol.h  tokens.h  verilog.c  verilog.g  vpp_common.h
gtkwave/contrib/vertex/: Makefile  Makefile.in  args.c  attrib.h  inter.c  inter.h  jrb.c  jrb.h  keyword_tokens.h  keywordhash.c  preproc.c  shred.c  shred.h  symbol.c  symbol.h  verilog.g  vpp_common.h
gtkwave/doc/: gtkwave.odt
gtkwave/examples/: des.script
gtkwave/man/: gtkwave.1  gtkwaverc.5  lxt2vcd.1  rtlbrowse.1  tex2vcd.1  tla2vcd.1  vcd2lxt2.1  vcd2vzt.1  vertex.1  vztminer.1
gtkwave/src/: Makefile.am  Makefile_GTK1.in  Makefile_GTK2.in  ae2.c  ae2.h  analyzer.c  analyzer.h  baseconvert.c  bitvec.c  bsearch.c  bsearch.h  busy.c  busy.h  clipping.c  clipping.h  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  entry.c  fetchbuttons.c  fgetdynamic.c  fgetdynamic.h  file.c  fonts.c  getopt.c  getopt1.c  ghw.c  ghw.h  ghwlib.c  ghwlib.h  gnu-getopt.h  gnu_regex.c  gnu_regex.h  gtk12compat.h  help.c  hiersearch.c  (+61 more)
gtkwave/src/helpers/: Makefile.am  Makefile.in  ghwdump.c  lxt2_read.c  lxt2_read.h  lxt2_write.c  lxt2_write.h  lxt2miner.c  lxt2vcd.c  lxt_write.c  lxt_write.h  mvl2lxt.c  mvl2vcd.c  mvlsimaet.html  scopenav.c  shmidcat.c  tex2vcd.c  tla2vcd.c  v2l_analyzer.h  v2l_analyzer_lxt2.h  v2l_debug.c  v2l_debug.h  v2l_debug_lxt2.c  v2l_debug_lxt2.h  vcd2lxt.c  vcd2lxt2.c  vcd2vzt.c  vzt2vcd.c  vzt_read.c  vzt_read.h  vzt_write.c  vzt_write.h  vztminer.c
gtkwave/src/libbz2/: Makefile.am  Makefile.in
gtkwave/src/libz/: Makefile.in
gtkwave3/: .gtkwaverc  CHANGELOG.TXT  INSTALL.TXT  LICENSE.TXT  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure2  distro_from_cvs.sh  install-sh  test.txt  wave_locale.h
gtkwave3/contrib/: Makefile.in
gtkwave3/contrib/pccts/: Makefile.in
gtkwave3/contrib/pccts/IBM_VISUAL_AGE_PROJECTS/: Makefile.in
gtkwave3/contrib/pccts/antlr/: Makefile.in
gtkwave3/contrib/pccts/dlg/: Makefile.in
gtkwave3/contrib/pccts/h/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/h/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/lib/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/test/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/test/test7/: Makefile.in
gtkwave3/contrib/pccts/sorcerer/testcpp/: Makefile.in
gtkwave3/contrib/pccts/support/: Makefile.in
gtkwave3/contrib/pccts/support/DECmms/: Makefile.in
gtkwave3/contrib/pccts/support/genmk/: Makefile.in
gtkwave3/contrib/pccts/support/rexpr/: Makefile.in
gtkwave3/contrib/pccts/support/set/: Makefile.in
gtkwave3/contrib/pccts/support/sym/: Makefile.in
gtkwave3/contrib/pccts/testcpp/: Makefile.in
gtkwave3/contrib/rtlbrowse/: Makefile.am  Makefile.in  definehash.c  fgetdynamic.c  fgetdynamic.h  jrb.c  jrb.h  logfile.c  splay.c  splay.h  stem_recurse.c  tcl_helper.c  tree_widget.c  vlex.c  vlex.h  vlex.l  wavelink.h
gtkwave3/contrib/vermin/: Makefile.am  Makefile.in  args.c  attrib.h  definehash.c  err.c  inter.c  inter.h  jrb.c  jrb.h  keyword_tokens.h  keywordhash.c  parser.dlg  preproc.c  scan.c  shred.c  shred.h  symbol.c  symbol.h  verilog.c  verilog.g  vpp_common.h
gtkwave3/contrib/vpi/: Makefile.am  sys_fst.c  sys_lxt.c  sys_lxt2.c  sys_vzt.c
gtkwave3/devtools/: backup.pl  cleanup.pl  copy_new.pl  divide_build_dumps.pl  drive_gtkwave.pl  mod_c.pl  rip_globals.pl
gtkwave3/devtools/tcc-0.9.23/: config.mak  i386-gen.c  tcc.c  test.c
gtkwave3/doc/: Makefile.in  gtkwave.odt
gtkwave3/examples/: Makefile.am  Makefile.in  des.sav  des.tcl  des.vzt  transaction.c
gtkwave3/man/: Makefile.am  Makefile.in  evcd2vcd.1  gtkwave.1  gtkwaverc.5  lxt2miner.1  lxt2vcd.1  mvl2lxt.1  mvl2vcd.1  rtlbrowse.1  shmidcat.1  vcd2fst.1  vcd2vzt.1  vzt2vcd.1  vztminer.1
gtkwave3/src/: Makefile.am  Makefile.in  ae2.c  ae2.h  analyzer.c  analyzer.h  baseconvert.c  bitvec.c  bsearch.c  bsearch.h  busy.c  busy.h  clipping.c  clipping.h  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  edgebuttons.c  entry.c  extload.c  extload.h  fetchbuttons.c  fgetdynamic.c  fgetdynamic.h  file.c  fonts.c  fonts.h  fst.c  fst.h  getopt.c  getopt1.c  ghw.c  ghw.h  ghwlib.c  ghwlib.h  globals.c  (+89 more)
gtkwave3/src/helpers/: Makefile.am  Makefile.in  evcd2vcd.c  fst2vcd.c  ghwdump.c  lxt2_read.c  lxt2_read.h  lxt2_write.c  lxt2_write.h  lxt2miner.c  lxt2vcd.c  lxt_write.c  lxt_write.h  mvl2lxt.c  mvl2vcd.c  scopenav.c  shmidcat.c  tex2vcd.c  tla2vcd.c  v2l_analyzer.h  v2l_analyzer_lxt2.h  v2l_debug.c  v2l_debug.h  v2l_debug_lxt2.c  v2l_debug_lxt2.h  vcd2fst.c  vcd2lxt.c  vcd2lxt2.c  vcd2vzt.c  vzt2vcd.c  vzt_common.h  vzt_read.c  vzt_read.h  vzt_write.c  vzt_write.h  vztminer.c
gtkwave3/src/helpers/fst/: Makefile.am  Makefile.in  block_format.txt  fastlz.c  fastlz.h  fstapi.c  fstapi.h
gtkwave3/src/libbz2/: Makefile.in
gtkwave3/src/liblzma/: LzmaDec.c  LzmaEnc.c  LzmaLib.c  LzmaLib.h  Makefile.am  Makefile.in  Types.h
gtkwave3/src/libz/: Makefile.am  Makefile.in  gzio.c
(+5 files in other folders)
